--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Marlon</span><br> Web Designer</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Vinay</span><br>Front-End web Developer</h1>
 
                 <a href="#" class="button">Contact</a>
             </div>
 
             <div class="home__social">
                 <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
+                <a href="" class="home__social-icon"><i class='bx bxl-gmail' ></i></a>
                 <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
             </div>
 
