--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Vinay</span><br>Front-End web Developer</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Vinay</span><br>Front-End web <br> Developer</h1>
 
                 <a href="#" class="button">Contact</a>
             </div>
