--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
             <div class="home__social">
                 <a href="" class="home__social-icon"><i class="fab fa-facebook-square"></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-gmail' ></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                <a href="" class="home__social-icon"><i class="fas fa-envelope-square"></i></a>
+                <a href="" class="home__social-icon"><i class="fab fa-linkedin"></i></a>
             </div>
 
             <div class="home__img">
