--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Portfolio website complete</title>
 </head>
 
-<body>
+<body style="background-color:powderblue;">
     <!--===== HEADER =====-->
     <header class="l-header">
         <nav class="nav bd-grid">
