--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
 <body style="background-color:powderblue;">
     <!--===== HEADER =====-->
-    <header class="l-header">
+    <header class="l-header" style="background-color:#000;" >
         <nav class="nav bd-grid">
             <div>
                 <a href="#" class="nav__logo">vinay</a>
             </div>
 
             <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list">
+                <ul class="nav__list"  style="color:#fff;">
                     <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
