--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
 
             <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list"  style="color:#fff;">
-                    <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
+                <ul class="nav__list"  >
+                    <li class="nav__item"><a href="#home" class="nav__link active" style="color:#fff;">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
