--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     <!--===== HEADER =====-->
     <header class="l-header" style="background-color:#000;" >
         <nav class="nav bd-grid">
-            <div>
-                <a href="#" class="nav__logo">vinay</a>
+            
+                <div class="home__img">
+                <img src="assets/img/v.png" alt="">
+          
             </div>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list"  >
                     <li class="nav__item"><a href="#home" class="nav__link active" style="color:#fff;">Home</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                    <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link" style="color:#fff;">About</a></li>
+                    <li class="nav__item"><a href="#skills" class="nav__link" style="color:#fff;">Skills</a></li>
+                    <li class="nav__item"><a href="#work" class="nav__link" style="color:#fff;">Work</a></li>
+                    <li class="nav__item"><a href="#contact" class="nav__link" style="color:#fff;">Contact</a></li>
                 </ul>
             </div>
 
