--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="l-header" style="background-color:#000;" >
         <nav class="nav bd-grid">
             
-                <div class="home__img">
+                <div style="color:#fff;">
                      <a href="#" class="nav__logo">vinay</a>    
             </div>
 
